[gd_scene load_steps=3 format=3 uid="uid://ckqgq85j0b4l1"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_0vl3c"]
[ext_resource type="PackedScene" uid="uid://c0m2p3uo8exlg" path="res://scenes/ui/game_hud.tscn" id="2_h3w4t"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_0vl3c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Environment" type="Node2D" parent="."]

[node name="RoomBackground" type="Sprite2D" parent="Environment"]
position = Vector2(400, 300)

[node name="CatManager" type="Node2D" parent="."]

[node name="CatContainer" type="Node2D" parent="CatManager"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameHUD" parent="UI" instance=ExtResource("2_h3w4t")]

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="SaveTimer" to="." method="_on_save_timer_timeout"]